# smolfuzz

./: CMakeLists.txt  LICENSE  README.md  arg.c  arg.h  call.c  call.h  common.h  fuzz.h  ret.c  ret.h  smolfuzz.h  test.c
